-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 9.0.0-beta1
-
-
17b1fa1618 (qt-creator/qt-creator/9.0) 17b1fa1618 (qt-creator/qt-creator/master) 17b1fa1618 (qt-creator/qt-creator/qds/dev)
Steps to reproduce:
- create a simple widget app from template (qbs based build)
- start debugger
- when application is up and running add a bp
Current behaviour:
- QC stops somewhere in qeventdispatcher_win.cpp
Note: Same happens for removing, enabling, disabling bps.
Note: This does not happen for cmake / qmake based builds.
For Gerrit Dashboard: QTCREATORBUG-28279 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
437845,3 | Debugger: Fix interrupting with cdb | 9.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |